fixed body alignment with header

--- a/_sass/custom/global.sass
+++ b/_sass/custom/global.sass
@@ -21,6 +21,7 @@ html
   height: 100%
   background-color: $background
   scroll-behavior: smooth
+  padding-top: 4.25rem
 
 body
   display: flex
