--- a/_sass/custom/header.sass
+++ b/_sass/custom/header.sass
@@ -53,6 +53,7 @@ $button-radius: 0.85rem
   z-index: 1
 
 .navbar-item
+  margin-bottom: 0
   .logos
     max-height: 3.25rem
 
